# agentic-workflow

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md
.github/workflows/: canonical-sister-guardrails.yml  ci.yml  install-command-guardrails.yml  release.yml
crates/agentic-workflow/: Cargo.toml
crates/agentic-workflow-cli/: Cargo.toml
crates/agentic-workflow-cli/src/: main.rs
crates/agentic-workflow-ffi/: Cargo.toml
crates/agentic-workflow-ffi/src/: lib.rs
crates/agentic-workflow-mcp/: Cargo.toml
crates/agentic-workflow-mcp/src/: lib.rs  main.rs
crates/agentic-workflow-mcp/src/config/: mod.rs
crates/agentic-workflow-mcp/src/prompts/: mod.rs
crates/agentic-workflow-mcp/src/protocol/: mod.rs
crates/agentic-workflow-mcp/src/resources/: mod.rs
crates/agentic-workflow-mcp/src/session/: mod.rs
crates/agentic-workflow-mcp/src/tools/: dag_tools.rs  execution_tools.rs  governance_tools.rs  intelligence_tools.rs  mod.rs  processing_tools.rs  registry.rs  resilience_tools.rs  schedule_tools.rs  state_tools.rs  template_tools.rs  trigger_tools.rs
crates/agentic-workflow-mcp/src/transport/: mod.rs
crates/agentic-workflow-mcp/src/types/: mod.rs
crates/agentic-workflow/src/: lib.rs
crates/agentic-workflow/src/engine/: batch.rs  dag.rs  dag_exec.rs  fanout.rs  fsm.rs  mod.rs  scheduler.rs  store.rs  stream.rs  trigger.rs
crates/agentic-workflow/src/format/: compression.rs  mod.rs  reader.rs  writer.rs
crates/agentic-workflow/src/governance/: approval.rs  audit.rs  mod.rs  variable.rs
crates/agentic-workflow/src/intelligence/: archaeology.rs  collective.rs  dream.rs  evolution.rs  mod.rs  prediction.rs
crates/agentic-workflow/src/resilience/: circuit.rs  dead_letter.rs  idempotency.rs  mod.rs  retry.rs  rollback.rs
crates/agentic-workflow/src/template/: composer.rs  engine.rs  mod.rs  natural.rs
crates/agentic-workflow/src/types/: approval.rs  audit.rs  batch.rs  circuit.rs  dead_letter.rs  error.rs  execution.rs  fanout.rs  fsm.rs  idempotency.rs  mod.rs  prediction.rs  retry.rs  rollback.rs  schedule.rs  stream.rs  template.rs  trigger.rs  variable.rs  workflow.rs
crates/agentic-workflow/tests/: phase1_types.rs  phase1_types_serde.rs  phase2_engine.rs  phase3_resilience.rs  phase4_governance.rs  phase4_variable.rs  phase5_template_intelligence.rs  phase6_edge_cases.rs  phase7_stress.rs  phase8_persistence.rs  phase9_concurrent.rs
docs/: api-reference.md  benchmarks.md  concepts.md  faq.md  integration-guide.md  quickstart.md
docs/public/: architecture.md  cli-reference.md  configuration.md  ffi-reference.md  mcp-prompts.md  mcp-resources.md  mcp-tools.md  troubleshooting.md
paper/: agenticworkflow-paper.tex
paper/paper-i-orchestration/: references.bib
scripts/: check-canonical-sister.sh  check-install-commands.sh  check-runtime-hardening.sh  install.sh  publish.sh
